<?xml version="1.0"?>
<package format="2">
  <name>f550_launch_odroid</name>
  <version>1.0.0</version>
  <description>Launch files for F550</description>

  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>

  <url type="repository">https://github.com/uenota/f550_launch_ordoid</url>
  <url type="bugtracker">https://github.com/uenota/f550_launch_odroid/issues</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mavros</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>hector_mapping</exec_depend>

  <export>
  </export>
</package>
